--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,15 +4,13 @@
  */
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "coderhangb",
 	"compatibility_date": "2025-09-06",
-	"compatibility_flags": [
-		"nodejs_compat"
-	],
-	"pages_build_output_dir": "./dist",
+	"compatibility_flags": ["nodejs_compat"],
+	"name": "coderhangb",
 	"observability": {
 		"enabled": true
-	}
+	},
+	"pages_build_output_dir": "./dist"
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
