--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,6 @@
 	},
 
 	"editor.defaultFormatter": "biomejs.biome",
-	"editor.formatOnSave": true,
 	"editor.codeActionsOnSave": {
 		"source.fixAll.biome": "explicit",
 		"source.organizeImports.biome": "explicit",
@@ -12,11 +11,11 @@
 		"source.action.useSortedProperties.biome": "explicit"
 	},
 
-	// "prettier.documentSelectors": ["**/*.astro", "**/*.vue"],
+	"prettier.documentSelectors": ["**/*.astro", "**/*.vue"],
 	"[astro]": {
 		"editor.defaultFormatter": "esbenp.prettier-vscode",
 		"editor.codeActionsOnSave": {
-			"source.fixAll.eslint": "explicit",
+			"source.fixAll.eslint": "always",
 			"source.organizeImports": "never"
 		}
 	},
