--- a/package.json
+++ b/package.json
@@ -5,46 +5,65 @@
 		}
 	},
 	"dependencies": {
-		"@astrojs/cloudflare": "^12.6.7",
-		"@astrojs/mdx": "^4.3.4",
+		"@astrojs/check": "^0.9.4",
+		"@astrojs/cloudflare": "^12.6.8",
+		"@astrojs/mdx": "^4.3.5",
 		"@astrojs/rss": "^4.0.12",
 		"@astrojs/sitemap": "^3.5.1",
-		"@astrojs/vue": "^5.1.0",
-		"astro": "^5.13.5",
-		"sharp": "^0.34.2",
+		"@astrojs/ts-plugin": "^1.10.4",
+		"@astrojs/vue": "^5.1.1",
+		"astro": "^5.13.7",
+		"sharp": "^0.34.3",
+		"typescript": "^5.9.2",
 		"vue": "^3.5.21"
 	},
 	"devDependencies": {
-		"@antfu/eslint-config": "^5.2.2",
 		"@biomejs/biome": "2.2.4",
+		"@commitlint/cli": "^19.8.1",
 		"@iconify-json/carbon": "^1.2.13",
 		"@iconify-json/logos": "^1.2.9",
 		"@iconify-json/mdi": "^1.2.3",
 		"@prettier/plugin-xml": "^3.4.2",
 		"@types/bun": "^1.2.21",
 		"@types/node": "^24.3.1",
-		"@unocss/eslint-plugin": "^66.5.0",
-		"@unocss/reset": "^66.5.0",
+		"@unocss/eslint-config": "^66.5.1",
+		"@unocss/eslint-plugin": "^66.5.1",
+		"@unocss/reset": "^66.5.1",
+		"commitizen": "^4.3.1",
+		"commitlint-config-gitmoji": "^2.3.1",
+		"concurrently": "^9.2.1",
+		"dpdm": "^3.14.0",
 		"eslint": "^9.35.0",
 		"eslint-plugin-astro": "^1.3.1",
-		"eslint-plugin-format": "^1.0.1",
-		"lefthook": "^1.12.4",
+		"lefthook": "^1.13.0",
 		"prettier": "^3.6.2",
 		"prettier-plugin-astro": "^0.14.1",
 		"rimraf": "^6.0.1",
-		"unocss": "^66.5.0",
-		"wrangler": "^4.34.0"
+		"unocss": "^66.5.1",
+		"wrangler": "^4.35.0"
+	},
+	"engines": {
+		"bun": "1.2.19",
+		"node": "24.4.1"
 	},
 	"name": "coderhangb",
 	"scripts": {
 		"astro": "astro",
-		"build": "astro build",
+		"build": "astro check && astro build",
 		"cf-typegen": "wrangler types",
+		"check:circular-deps": "dpdm './src/**/*.{ts,tsx,js,jsx,md,mdx}' --exit-code circular:1 --no-tree --no-warning",
+		"check:types": "astro check",
+		"check:update-deps": "bunx taze",
 		"commit": "git-cz",
 		"deploy": "astro build && wrangler pages deploy",
 		"dev": "astro dev",
-		"lint": "eslint",
-		"lint:fix": "eslint --fix",
+		"format": "bun run format:code && bun run format:imports",
+		"format:code": "biome format --write && prettier -w \"**/*\" --ignore-unknown --cache",
+		"format:imports": "biome check --formatter-enabled=false --write",
+		"lint": "concurrently \"bun run lint:astro\" \"bun run lint:js\"",
+		"lint:astro": "eslint --ext .astro .",
+		"lint:astro:fix": "bun run lint:astro --fix",
+		"lint:fix": "concurrently \"bun run lint:astro:fix\" \"bun run lint:js:fix\"",
 		"lint:js": "biome lint .",
 		"lint:js:fix": "biome lint --write --unsafe .",
 		"prepare": "lefthook install",
@@ -53,8 +72,12 @@
 	},
 	"type": "module",
 	"validate-branch-name": {
-		"errorMsg": "Brand name is invalid, please rename your current branch",
+		"errorMsg": "Branch name is invalid, please rename your current branch",
 		"pattern": "^(master|main|develop){1}$|^(chore|docs|feat|fix|hotfix|perf|refactor|release|test)/.+$"
 	},
-	"version": "0.0.1"
+	"version": "0.0.1",
+	"volta": {
+		"bun": "1.2.19",
+		"node": "24.4.1"
+	}
 }
