--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"commitizen": "^4.3.1",
 		"commitlint-config-gitmoji": "^2.3.1",
 		"concurrently": "^9.2.1",
+		"cz-git": "^1.12.0",
 		"dpdm": "^3.14.0",
 		"eslint": "^9.35.0",
 		"eslint-plugin-astro": "^1.3.1",
