--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@builder.io/qwik": "^1.16.0",
 		"@qwikdev/astro": "^0.8.2",
 		"astro": "^5.13.7",
+		"dayjs": "^1.11.18",
 		"sharp": "^0.34.3",
 		"typescript": "^5.9.2",
 		"vue": "^3.5.21"
@@ -28,8 +29,8 @@
 		"@prettier/plugin-xml": "^3.4.2",
 		"@types/bun": "^1.2.21",
 		"@types/node": "^24.3.1",
+		"@typescript-eslint/parser": "^8.43.0",
 		"@unocss/eslint-config": "^66.5.1",
-		"@unocss/eslint-plugin": "^66.5.1",
 		"@unocss/reset": "^66.5.1",
 		"commitizen": "^4.3.1",
 		"commitlint-config-gitmoji": "^2.3.1",
@@ -37,7 +38,9 @@
 		"cz-git": "^1.12.0",
 		"dpdm": "^3.14.0",
 		"eslint": "^9.35.0",
+		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-astro": "^1.3.1",
+		"eslint-plugin-jsx-a11y": "^6.10.2",
 		"lefthook": "^1.13.0",
 		"prettier": "^3.6.2",
 		"prettier-plugin-astro": "^0.14.1",
@@ -64,8 +67,8 @@
 		"format:code": "biome format --write && prettier -w \"**/*\" --ignore-unknown --cache",
 		"format:imports": "biome check --formatter-enabled=false --write",
 		"lint": "concurrently \"bun run lint:astro\" \"bun run lint:js\"",
-		"lint:astro": "eslint --ext .astro .",
-		"lint:astro:fix": "bun run lint:astro --fix",
+		"lint:astro": "eslint src --ext .astro",
+		"lint:astro:fix": "eslint src --ext .astro --fix",
 		"lint:fix": "concurrently \"bun run lint:astro:fix\" \"bun run lint:js:fix\"",
 		"lint:js": "biome lint .",
 		"lint:js:fix": "biome lint --write --unsafe .",
