--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
 		"@astrojs/rss": "^4.0.12",
 		"@astrojs/sitemap": "^3.5.1",
 		"@astrojs/ts-plugin": "^1.10.4",
-		"@astrojs/vue": "^5.1.1",
 		"@builder.io/qwik": "^1.16.0",
 		"@qwikdev/astro": "^0.8.2",
 		"astro": "^5.13.7",
+		"clsx": "^2.1.1",
 		"dayjs": "^1.11.18",
 		"sharp": "^0.34.3",
-		"typescript": "^5.9.2",
-		"vue": "^3.5.21"
+		"tailwind-merge": "^3.3.1",
+		"typescript": "^5.9.2"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.2.4",
